no more top cutoff when WP user not logged in, clicking a term pill, or a term in the filters once added now marks it for exclusion so returned recipes will be ones WITHOUT that term, filter no longer jumps when toggling term lists, when free typing in the search bar, an autocomplete now appears for matching terms

--- a/src/css/recipe-search.css
+++ b/src/css/recipe-search.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+/**
+  Takes no-button-style a step further for creating
+  buttons that look like regular text for interactive
+  elements with very custom styles
+**/
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;600;0,700;1,400;1,700&display=swap");
 @import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 html {
@@ -1682,3 +1687,50 @@ dialog {
 
 .ClearTermsButton__tax-item--categories button:hover {
   color: #558C03; }
+
+.SearchAutoComplete__Suggestion {
+  font-weight: bold;
+  padding: 0;
+  margin: 0; }
+  .SearchAutoComplete__Suggestion--wprm_ingredient {
+    color: #BF0404; }
+  .SearchAutoComplete__Suggestion--wprm_cuisine {
+    color: #00A6A5; }
+  .SearchAutoComplete__Suggestion--wprm_course {
+    color: #F26B1D; }
+  .SearchAutoComplete__Suggestion--category {
+    color: #558C03; }
+
+.SearchAutoComplete {
+  position: relative; }
+
+.SearchAutoComplete__Suggestions {
+  position: absolute;
+  width: auto;
+  min-width: 25%;
+  background-color: #fff;
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
+  padding: .2em 0;
+  margin: 0;
+  display: block;
+  z-index: 99; }
+
+.SearchAutoComplete__Suggestion-btn {
+  background: transparent;
+  border: none;
+  font-size: 1em;
+  border-radius: 0;
+  width: 100%;
+  text-align: left;
+  color: inherit;
+  font-weight: inherit;
+  border: none;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  transition: all 0.2s ease-in-out 0s;
+  padding: .2em 1em;
+  cursor: pointer; }
+  .SearchAutoComplete__Suggestion-btn:hover,
+  .active .SearchAutoComplete__Suggestion-btn {
+    background-color: #eee; }
